2007-08-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/backquote.el (backquote-delay-process): New function.
	(backquote-process): Add internal arg `level'.  Use the two to
	correctly handle nested backquotes.

2007-08-09  Riccardo Murri  <riccardo.murri@gmail.com>

	* vc-bzr.el (vc-bzr-registered): Use \0 instead of literal NULs.
	(vc-bzr-state-words): Add "kind changed" state word.
	(vc-bzr-status): New function.  Return Bzr idea of file status,
	which is different from VC's.
	(vc-bzr-state): Use vc-bzr-status.
	(vc-workfile-unchanged-p): Use vc-bzr-status.
	(vc-bzr-revert): Use synchronous process; expect exitcode 0.
	(vc-dired-state): Process "kind changed" state word.

2007-08-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el (vc-default-find-file-not-found-hook): Do nothing.

	* vc-rcs.el (vc-rcs-find-file-not-found-hook):
	Move from vc-default-find-file-not-found-hook.

2007-08-09  Edward O'Connor  <hober0@gmail.com> (tiny change)

	* url/url-auth.el (url-basic-auth): When prompting for username
	and password, default to the username and password in the URL.

2007-08-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* man.el: Remove spurious * in docstrings.
	Merge defvars and toplevel setq-defaults.
	(Man-highlight-references0): Limit=nil rather than point-max.
	(Man-mode-map): Move initialization into the declaration.
	(Man-strip-page-headers, Man-unindent): Use dolist & inhibit-read-only.
	(Man-view-header-file): Use expand-file-name rather than concat.
	(Man-notify-when-ready, Man-bgproc-sentinel): Use with-current-buffer.

	* man.el (Man-next-section): Make sure we do not move backward.

2007-08-08  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-default-fg, ps-default-bg): Docstring fix.
	(ps-begin-job): Use ps-default-fg and ps-default-bg only when
	ps-print-color-p is neither nil nor black-white.  Reported by Christian
	Schlauer <cs-muelleimer-rubbish.bin@arcor.de>.
